# media-downloader

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIARY.md  EXPERIMENTS.md  Makefile  README.md  SECURITY.md  api.py  cli.py  downloader.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/: cli_progress.py  local_storage.py  ytdlp_downloader.py
adapters/destinations/: instagram_story.py  registry.py  whatsapp_status.py
adapters/whatsapp/: _ffmpeg.py  codec.py  processor.py  resize.py  split.py  trim.py
app/: use_cases.py
domain/: models.py  pipeline.py  ports.py  signals.py
scripts/: docs-freshness.py  docs_freshness.py
tests/: test_downloader.py  test_local_storage.py  test_models.py  test_use_cases.py  test_ytdlp_downloader.py
tests/adapters/: conftest.py  test_local_storage.py  test_whatsapp_steps.py  test_ytdlp_downloader.py
tests/api/: test_api.py
tests/app/: test_use_cases.py
tests/cli/: test_cli.py
tests/contracts/: test_contracts.py  test_destination_contracts.py
tests/domain/: test_models.py  test_pipeline.py  test_signals.py
tests/integration/: test_integration.py
tests/legacy/: test_downloader.py
tests/scripts/: test_docs_freshness.py
